basket-api-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-api-depl
  labels:
    app: basket-api_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basket-api_label
  template:
    metadata:
      labels:
        app: basket-api_label
    spec:
      containers:
      - name: basket-api-image
        image: natn2003/basketapi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: basket-api
spec:
  type: LoadBalancer
  selector:
    app: basket-api_label
  ports:
  - protocol: TCP
    port: 6001
    targetPort: 8080
    nodePort: 32006
