catalog-api-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-api-depl
  labels:
    app: catalog-api_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalog-api_label
  template:
    metadata:
      labels:
        app: catalog-api_label
    spec:
      containers:
      - name: catalog-api-image
        image: natn2003/catalogapi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-api
  
spec:
  type: LoadBalancer
  selector:
    app: catalog-api_label
  ports:
  - protocol: TCP
    port: 6000
    targetPort: 8080
    nodePort: 32000
