discount-api-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discount-api-depl
  labels:
    app: discount-api_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discount-api_label
  template:
    metadata:
      labels:
        app: discount-api_label
    spec:
      containers:
      - name: discount-api-image
        image: natn2003/discountgrpc
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: discount-api
spec:
  type: LoadBalancer
  selector:
    app: discount-api_label
  ports:
  - protocol: TCP
    port: 6002
    targetPort: 8080
    nodePort: 32002
