external-image-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogdb-deployment
  labels:
    app: catalogdb_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalogdb_label
  template:
    metadata:
      labels:
        app: catalogdb_label
    spec:
      containers:
      - name: catalogdb-postgres
        image: postgres:13.2-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: catalogdb
spec:
  selector:
    app: catalogdb_label
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basketdb-deployment
  labels:
    app: basketdb_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: basketdb_label
  template:
    metadata:
      labels:
        app: basketdb_label
    spec:
      containers:
      - name: basketdb-postgres
        image: postgres:13.2-alpine
        ports:
        - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: basketdb
spec:
  selector:
    app: basketdb_label
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: distributedcache-depl
  labels:
    app: distributedcache_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: distributedcache_label
  template:
    metadata:
      labels:
        app: distributedcache_label
    spec:
      containers:
      - name: distributedcache-redis
        image: redis:7.4.1-alpine
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: distributedcache
spec:
  selector:
    app: distributedcache_label
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderdb-depl
  labels:
    app: orderdb_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderdb_label
  template:
    metadata:
      labels:
        app: orderdb_label
    spec:
      containers:
      - name: orderdb-mssql
        image: mcr.microsoft.com/mssql/server
        ports:
        - containerPort: 1433
        securityContext:
          runAsUser: 0
---
apiVersion: v1
kind: Service
metadata:
  name: orderdb
spec:
  selector:
    app: orderdb_label
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userdb-depl
  labels:
    app: userdb_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userdb_label
  template:
    metadata:
      labels:
        app: userdb_label
    spec:
      containers:
      - name: userdb-mongo
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: userdb_label
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: messagebroker-depl
  labels:
    app: messagebroker_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: messagebroker_label
  template:
    metadata:
      labels:
        app: messagebroker_label
    spec:
      containers:
      - name: messagebroker-rabbitmq
        image: rabbitmq:3.12.14-management-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-mq
spec:
  selector:
    app: messagebroker_label
  ports:
  - protocol: TCP
    name: amqp
    port: 5672
    targetPort: 5672
  - protocol: TCP
    name: management
    port: 15672
    targetPort: 15672
