ordering-api-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ordering-api-depl
  labels:
    app: ordering-api_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ordering-api_label
  template:
    metadata:
      labels:
        app: ordering-api_label
    spec:
      containers:
      - name: ordering-api-image
        image: natn2003/orderingapi
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ordering-api
spec:
  selector:
    app: ordering-api_label
  ports:
  - protocol: TCP
    port: 6003
    targetPort: 8080
