user-api-delp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-depl
  labels:
    app: user-api_label
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-api_label
  template:
    metadata:
      labels:
        app: user-api_label
    spec:
      containers:
      - name: user-api-image
        image: natn2003/userapi
        ports:
        - containerPort: 8080
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 1
---
apiVersion: v1
kind: Service
metadata:
  name: user-api
spec:
  selector:
    app: user-api_label
  ports:
  - protocol: TCP
    port: 6004
    targetPort: 8080
