nginx-ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: "nginx"  # Thêm dòng này để chỉ định Nginx Ingress controller
spec:
  rules:
  - http:
      paths:
      - path: /product-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: catalog-api
            port:
              number: 6000
      - path: /basket-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: basket-api
            port:
              number: 6001
      - path: /auth-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-api
            port:
              number: 6004
      - path: /order-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ordering-api
            port:
              number: 6003
      - path: /user-api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: user-api
            port:
              number: 6004
